# hi_dynamic_control

./: README.md
hi_common/: CMakeLists.txt  package.xml
hi_common/include/hi_common/: output_color.h
hi_common/include/hi_common/hardware_interface/: ContactSensorInterface.h  HybridJointInterface.h
hi_controllers/: CMakeLists.txt  hi_controllers_plugins.xml  package.xml
hi_controllers/cfg/: Tutorials.cfg
hi_controllers/config/: controllers.yaml  joy.yaml
hi_controllers/config/hi/: reference.info  reference_sim.info  task.info  task_sim.info
hi_controllers/include/hi_controllers/: SafetyChecker.h  TargetTrajectoriesPublisher.h  hiController.h  utilities.h
hi_controllers/include/hi_controllers/visualization/: piSelfCollisionVisualization.h
hi_controllers/launch/: joy_teleop.launch  load_controller_real.launch  load_controller_sim.launch  one_start_gazebo.launch  one_start_real.launch
hi_controllers/rviz/: legged_robot.rviz
hi_controllers/src/: TargetTrajectoriesPublisher.cpp  hiController.cpp  utilities.cpp
hi_estimation/: CMakeLists.txt  package.xml
hi_estimation/include/hi_estimation/: FromTopiceEstimate.h  LinearKalmanFilter.h  StateEstimateBase.h
hi_estimation/src/: FromTopicEstimate.cpp  LinearKalmanFilter.cpp  StateEstimateBase.cpp
hi_examples/hi_biped/hi_description/: CMakeLists.txt  package.xml
hi_examples/hi_bridge/hi_bridge_hw/: CMakeLists.txt  package.xml
hi_gazebo/: CMakeLists.txt  hi_hw_sim_plugins.xml  package.xml
hi_gazebo/config/: default.yaml
hi_gazebo/include/hi_gazebo/: hiHWSim.h
hi_gazebo/src/: hiHWSim.cpp
hi_hw/: CMakeLists.txt  package.xml
hi_hw/include/hi_hw/: hiHW.h  hiHWLoop.h
hi_hw/src/: hiHW.cpp  hiHWLoop.cpp
hi_interface/: CMakeLists.txt  package.xml
hi_interface/include/hi_interface/: SwitchedModelReferenceManager.h  hiInterface.h  hiRobotPreComputation.h
hi_interface/launch/: hi_robot_sqp.launch
hi_interface/src/: SwitchedModelReferenceManager.cpp  hiInterface.cpp  hiRobotPreComputation.cpp
hi_interface/src/common/: ModelSettings.cpp
hi_interface/src/constraint/: EndEffectorLinearConstraint.cpp  FootRollConstraint.cpp  FrictionConeConstraint.cpp  NormalVelocityConstraintCppAd.cpp  XYLimitConstraint.cpp  XYReferenceConstraintCppAd.cpp  ZeroForceConstraint.cpp  ZeroVelocityConstraintCppAd.cpp
hi_interface/src/dynamics/: hiRobotDynamicsAD.cpp
hi_interface/src/foot_planner/: CubicSpline.cpp  InverseKinematics.cpp  MultiCubicSpline.cpp  SplineCpg.cpp  SwingTrajectoryPlanner.cpp
hi_interface/src/gait/: Gait.cpp  GaitSchedule.cpp  LegLogic.cpp  ModeSequenceTemplate.cpp
hi_interface/src/initialization/: hiRobotInitializer.cpp
hi_interface/src/test/: hiRobotDummyNode.cpp  hiRobotSqpMpcNode.cpp
hi_interface/src/visualization/: hiRobotVisualizer.cpp
hi_wbc/: CMakeLists.txt  package.xml
hi_wbc/include/hi_wbc/: HierarchicalWbc.h  HoQp.h  Task.h  WbcBase.h  WeightedWbc.h
hi_wbc/src/: HierarchicalWbc.cpp  HoQp.cpp  WbcBase.cpp  WeightedWbc.cpp
hi_wbc/test/: HoQp_test.cpp
pi_common/: CMakeLists.txt  package.xml
pi_common/include/pi_common/: output_color.h
pi_common/include/pi_common/hardware_interface/: ContactSensorInterface.h  HybridJointInterface.h
pi_controllers/: CMakeLists.txt  package.xml  pi_controllers_plugins.xml
pi_controllers/cfg/: Tutorials.cfg
pi_controllers/config/: controllers.yaml  joy.yaml
pi_controllers/config/hi/: reference.info  reference_sim.info  task.info  task_sim.info
pi_controllers/include/pi_controllers/: SafetyChecker.h  TargetTrajectoriesPublisher.h  piController.h  utilities.h
pi_controllers/include/pi_controllers/visualization/: piSelfCollisionVisualization.h
pi_controllers/launch/: joy_teleop.launch  load_controller_real.launch  load_controller_sim.launch  one_start_gazebo.launch  one_start_real.launch  rosbag_topic.launch
pi_controllers/src/: TargetTrajectoriesPublisher.cpp  piController.cpp  utilities.cpp
pi_estimation/: CMakeLists.txt  package.xml
pi_estimation/include/pi_estimation/: FromTopiceEstimate.h  LinearKalmanFilter.h  StateEstimateBase.h
pi_estimation/src/: FromTopicEstimate.cpp  LinearKalmanFilter.cpp  StateEstimateBase.cpp
pi_examples/pi_biped/pi_description/: CMakeLists.txt  package.xml
pi_examples/pi_biped/pi_description/launch/: display.launch  empty_world.launch
pi_examples/pi_biped/pi_description/urdf/: hi.urdf  pai_12dof_v2_0312.csv
pi_examples/pi_bridge/pi_bridge_hw/: CMakeLists.txt  package.xml
pi_examples/pi_bridge/pi_bridge_hw/app/: command.cpp  command.h  motor_control.c  transmit.cpp
pi_examples/pi_bridge/pi_bridge_hw/config/: pi.yaml
pi_examples/pi_bridge/pi_bridge_hw/include/pi_bridge_hw/: BridgeHW.h
pi_examples/pi_bridge/pi_bridge_hw/launch/: pi_bridge_lively_HW.launch  pi_bridge_lively_imu.launch
pi_examples/pi_bridge/pi_bridge_hw/src/: BridgeHW.cpp  pi_bridge_hw.cpp
pi_gazebo/: CMakeLists.txt  package.xml  pi_hw_sim_plugins.xml
pi_gazebo/config/: default.yaml
pi_gazebo/include/pi_gazebo/: piHWSim.h
pi_gazebo/src/: piHWSim.cpp
pi_hw/: CMakeLists.txt  package.xml
pi_hw/include/pi_hw/: piHW.h  piHWLoop.h
pi_hw/src/: piHW.cpp  piHWLoop.cpp
pi_interface/: CMakeLists.txt  package.xml
pi_interface/include/pi_interface/: SwitchedModelReferenceManager.h  piInterface.h  piRobotPreComputation.h
pi_interface/launch/: pi_robot_sqp.launch
pi_interface/src/: SwitchedModelReferenceManager.cpp  piInterface.cpp  piRobotPreComputation.cpp
pi_interface/src/common/: ModelSettings.cpp
pi_interface/src/constraint/: EndEffectorLinearConstraint.cpp  FootRollConstraint.cpp  FrictionConeConstraint.cpp  NormalVelocityConstraintCppAd.cpp  XYLimitConstraint.cpp  XYReferenceConstraintCppAd.cpp  ZeroForceConstraint.cpp  ZeroVelocityConstraintCppAd.cpp
pi_interface/src/dynamics/: piRobotDynamicsAD.cpp
pi_interface/src/foot_planner/: CubicSpline.cpp  InverseKinematics.cpp  MultiCubicSpline.cpp  SplineCpg.cpp  SwingTrajectoryPlanner.cpp
pi_wbc/: CMakeLists.txt  package.xml
pi_wbc/src/: HierarchicalWbc.cpp  HoQp.cpp  WbcBase.cpp  WeightedWbc.cpp
pi_wbc/test/: HoQp_test.cpp
(+78 files in other folders)
