<?xml version="1.0"?>
<package format="2">
    <name>pi_controllers</name>
    <version>0.0.0</version>
    <description>The pi_controllers packages.</description>
    <maintainer email="service@hightorque.cn">hightorque</maintainer>
    <license>MIT</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>cmake_clang_tools</build_depend>
    <depend>roscpp</depend>
    <depend>pi_common</depend>
    <depend>pi_interface</depend>
    <depend>pi_estimation</depend>
    <depend>pi_wbc</depend>

    <depend>controller_interface</depend>
    <depend>ocs2_legged_robot_ros</depend>
    <depend>ocs2_self_collision_visualization</depend>

    <depend>angles</depend>
    <depend>dynamic_reconfigure</depend>
    <depend>rospy</depend>
    <depend>std_msgs</depend>
    <depend>message_runtime</depend>
    <depend>message_generation</depend>

    <exec_depend>controller_manager</exec_depend>

    <export>
        <controller_interface plugin="${prefix}/pi_controllers_plugins.xml"/>
    </export>
</package>
