<?xml version="1.0"?>
<package format="2">
    <name>pi_estimation</name>
    <version>0.0.0</version>
    <description>The pi_estimation packages.</description>
    <maintainer email="service@hightorque.cn">hightorque</maintainer>
    <license>MIT</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>cmake_clang_tools</build_depend>
    <depend>roscpp</depend>
    <depend>pi_common</depend>
    <depend>realtime_tools</depend>
    <depend>tf2_ros</depend>
    <depend>pi_interface</depend>

</package>
