<?xml version="1.0"?>
<package format="2">
    <name>pi_gazebo</name>
    <version>0.0.0</version>
    <description>The pi_gazebo packages.</description>
    <maintainer email="service@hightorque.cn">hightorque</maintainer>
    <license>MIT</license>

    <!-- buildtool_depend: dependencies of the build process -->
    <buildtool_depend>catkin</buildtool_depend>
    <!-- depend: build, export, and execution dependency -->
    <depend>roscpp</depend>
    <depend>pi_common</depend>
    <depend>gazebo_dev</depend>
    <depend>gazebo_ros_control</depend>
    <depend>gazebo_ros</depend>

    <export>
        <gazebo_ros_control plugin="${prefix}/pi_hw_sim_plugins.xml"/>
        <gazebo_ros gazebo_model_path="${prefix}"/>
    </export>
</package>
