<package format="2">
<!-- ENCOS-URDF-EXPORT -->
  <name>pi_description</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for pi_description</p>
    <p>This package contains configuration data, 3D models and launch files for pi_description robot</p>
  </description>
  <maintainer email="service@hightorque.cn">hightorque</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>gazebo</depend>
  <export>
    <architecture_independent />
  </export>
</package>