<?xml version="1.0"?>
<package format="2">
    <name>pi_bridge_hw</name>
    <version>0.0.0</version>
    <description>ROS control warped interface for Unitree Robots</description>
    <maintainer email="service@hightorque.cn">hightorque</maintainer>

    <license>MIT</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>cmake_clang_tools</build_depend>
    <depend>roscpp</depend>
    <depend>pi_hw</depend>
</package>
